--- a/article.html
+++ b/article.html
@@ -15,7 +15,7 @@
                 <a href="#" class="mobile-menu__nav-link">
                     О компании
                 </a>
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="./articles.html" class="mobile-menu__nav-link">
                     Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
@@ -28,7 +28,7 @@
                     Контакты
                 </a>
             </nav>
-            <a href="#" class="btn btn_icon mobile-menu__btn">
+            <a href="./catalog.html" class="btn btn_icon mobile-menu__btn">
                 <div class="btn__icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -43,7 +43,7 @@
         </div>
         <header class="header">
             <div class="wrapper header__wrapper">
-                <a href="#" class="header__logo-link">
+                <a href="/" class="header__logo-link">
                     <img src="./assets/img/logo.png" alt="Краски KOVALI" class="logo header__logo">
                     <span class="header__logo-year">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
@@ -60,7 +60,7 @@
                     <a href="#" class="header__nav-link">
                         О компании
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="./articles.html" class="header__nav-link">
                         Статьи
                     </a>
                     <a href="#" class="header__nav-link">
@@ -90,7 +90,7 @@
                     <a href="tel:+79999999999" class="tel-link header__tel-link">
                         +7 999 999-99-99
                     </a>
-                    <a href="#" class="btn btn_icon header__btn">
+                    <a href="./catalog.html" class="btn btn_icon header__btn">
                         <div class="btn__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -120,142 +120,19 @@
             <section class="article-section">
                 <div class="wrapper article-section__wrapper">
                     <div class="breadcrumbs article-section__breadcrumbs">
-                        <a href="#" class="breadcrumbs__link">
+                        <a href="./articles.html" class="breadcrumbs__link">
                             Статьи
                         </a>
-                        <a href="#" class="breadcrumbs__link active">
-                            Грунты для металлических изделий
+                        <a href="#" class="breadcrumbs__link breadcrumbs__link_active active">
                         </a>
                     </div>
                     <h1 class="article-section__heading">
-                        Грунты для металлических изделий
                     </h1>
                     <p class="article-section__date">
-                        16 марта 2023 9:37
                     </p>
-                    <img src="./assets/img/article-img.jpg" alt="
+                    <img src="" alt="
                     Грунты для металлических изделий" class="article-section__img">
                     <div class="article-section__text-content">
-                        <h2>Подготовка грунта</h2>
-                        <p>
-                            Подготовка металла к грунтованию поможет обеспечить хорошее сцепление металла и грунта.
-                            Вот некоторые шаги, которые
-                            следует выполнять для подготовки металла к грунтованию:
-                        </p>
-                        <ol>
-                            <li>
-                                Очистите поверхность металла от ржавчины, грязи, жира, масла или других загрязнений
-                                с помощью стальной щётки,
-                                шлифовального инструмента или диска для удаления окислов.
-                            </li>
-                            <li>
-                                Обработайте поверхность с помощью растворителя или специального обезжиривателя.
-                            </li>
-                            <li>
-                                Если поверхность металла имеет окисленные участки, обработайте их с помощью
-                                преобразователя ржавчины или другого
-                                специального средства для удаления окислов.
-                            </li>
-                            <li>
-                                Произведите шлифование металлической поверхности для удаления любых остатков коррозии
-                                и для создания шероховатости,
-                                которая обеспечит лучшее сцепление с грунтом.
-                            </li>
-                        </ol>
-                        <p>
-                            После этого поверхность металла готова к нанесению грунтовки. Перед нанесением грунта,
-                            необходимо обезжирить поверхность
-                            ещё раз. Важно отметить, что тип используемой грунтовки будет зависеть от цели и условий
-                            эксплуатации металлической
-                            конструкции. При выборе грунтовки необходимо учитывать факторы, такие как влажность,
-                            коррозия.
-                        </p>
-                        <h2>
-                            Антикоррозийные грунты
-                        </h2>
-                        <p>
-                            <a href="#">Антикоррозионные грунты</a> — это материалы, которые применяются для защиты
-                            металлических
-                            поверхностей от коррозии. Коррозия
-                            может быть вызвана контактом металла с водой, кислотами, солями или другими химическими
-                            веществами, что приводит
-                            к постепенному разрушению материала.
-                            <br>
-                            <br>
-                            Антикоррозионные грунты могут быть изготовлены на основе различных компонентов, включая
-                            смолы, пигменты и антиоксиданты.
-                            Они могут применяться на различных поверхностях, включая стальные конструкции, трубы,
-                            судовые корпуса и автомобильные
-                            кузова.
-                            <br>
-                            <br>
-                            Основная цель антикоррозионных грунтов — предотвратить коррозию поверхности металла
-                            и продлить её срок службы. Для этого
-                            грунт наносится на поверхность металла тонким слоем, который защищает поверхность
-                            от воздействия атмосферных условий
-                            и химических веществ.
-                            <br>
-                            <br>
-                            При выборе антикоррозионного грунта необходимо учитывать условия эксплуатации поверхности
-                            металла, такие
-                            как температура, влажность и химическая среда. Некоторые антикоррозионные грунты могут иметь
-                            высокую стоимость,
-                            но они могут быть необходимы для повышения долговечности металлической конструкции
-                            или устройства.
-                            <br>
-                            <br>
-                            Мы предлагаем для вашего выбора грунты из ассортимента KOVALI:
-                            <br>
-                            <br>
-                            Грунт «KOVALI» является более универсальным и доступным по цене/ Предназначен
-                            для использования в умеренном климате
-                            в качестве грунтовочного слоя металлических конструкций и сооружений для повышения защитных
-                            свойств систем покрытий.
-                            Подходит для использования внутри и снаружи помещения.
-                        </p>
-                        <img src="./assets/img/article-img.jpg" alt="">
-                        <h2>Антикоррозийные грунты</h2>
-                        <p>
-                            <a href="#">Антикоррозионные грунты</a> — это материалы, которые применяются для защиты
-                            металлических
-                            поверхностей от коррозии. Коррозия
-                            может быть вызвана контактом металла с водой, кислотами, солями или другими химическими
-                            веществами, что приводит
-                            к постепенному разрушению материала.
-                            <br>
-                            <br>
-                            Антикоррозионные грунты могут быть изготовлены на основе различных компонентов, включая
-                            смолы, пигменты и антиоксиданты.
-                            Они могут применяться на различных поверхностях, включая стальные конструкции, трубы,
-                            судовые корпуса и автомобильные
-                            кузова.
-                            <br>
-                            <br>
-                            Основная цель антикоррозионных грунтов — предотвратить коррозию поверхности металла
-                            и продлить её срок службы. Для этого
-                            грунт наносится на поверхность металла тонким слоем, который защищает поверхность
-                            от воздействия атмосферных условий
-                            и химических веществ.
-                            <br>
-                            <br>
-                            При выборе антикоррозионного грунта необходимо учитывать условия эксплуатации поверхности
-                            металла, такие
-                            как температура, влажность и химическая среда. Некоторые антикоррозионные грунты могут иметь
-                            высокую стоимость,
-                            но они могут быть необходимы для повышения долговечности металлической конструкции
-                            или устройства.
-                            <br>
-                            <br>
-                            Мы предлагаем для вашего выбора грунты из ассортимента KOVALI:
-                            <br>
-                            <br>
-                            Грунт «KOVALI» является более универсальным и доступным по цене/ Предназначен
-                            для использования в умеренном климате
-                            в качестве грунтовочного слоя металлических конструкций и сооружений для повышения защитных
-                            свойств систем покрытий.
-                            Подходит для использования внутри и снаружи помещения.
-                        </p>
-                        <img src="./assets/img/article-img.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -393,6 +270,7 @@
         </footer>
     </div>
     <script src="./scripts/burger-menu.js"></script>
+    <script type="module" src="./scripts/article-item.js"></script>
 </body>
 
 </html>
