--- a/articles.html
+++ b/articles.html
@@ -16,7 +16,7 @@
                 <a href="#" class="mobile-menu__nav-link">
                     О компании
                 </a>
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="./articles.html" class="mobile-menu__nav-link">
                     Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
@@ -29,7 +29,7 @@
                     Контакты
                 </a>
             </nav>
-            <a href="#" class="btn btn_icon mobile-menu__btn">
+            <a href="./catalog.html" class="btn btn_icon mobile-menu__btn">
                 <div class="btn__icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -44,7 +44,7 @@
         </div>
         <header class="header">
             <div class="wrapper header__wrapper">
-                <a href="#" class="header__logo-link">
+                <a href="/" class="header__logo-link">
                     <img src="./assets/img/logo.png" alt="Краски KOVALI" class="logo header__logo">
                     <span class="header__logo-year">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
@@ -61,7 +61,7 @@
                     <a href="#" class="header__nav-link">
                         О компании
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="./articles.html" class="header__nav-link">
                         Статьи
                     </a>
                     <a href="#" class="header__nav-link">
@@ -91,7 +91,7 @@
                     <a href="tel:+79999999999" class="tel-link header__tel-link">
                         +7 999 999-99-99
                     </a>
-                    <a href="#" class="btn btn_icon header__btn">
+                    <a href="./catalog.html" class="btn btn_icon header__btn">
                         <div class="btn__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -121,54 +121,12 @@
             <section class="articles-section">
                 <div class="wrapper articles-section__wrapper">
                     <div class="swiper articles-section__date-filter">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link active">
-                                    2021
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2022
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2023
-                                </a>
-                            </div>
-                            <div class="swiper-slide articles-section__swiper-slide">
-                                <a href="#" class="articles-section__date-filter-link">
-                                    2024
-                                </a>
-                            </div>
+                        <div class="swiper-wrapper articles-section__swiper-wrapper">
                         </div>
                     </div>
                     <ul class="articles-section__list">
-                        <li class="articles-section__list-item">
-                            <a href="#" class="articles-section__list-item-link-wrapper">
-                                <div class="articles-section__list-item-img-wrapper">
-                                    <img src="./assets/img/articles-img.jpg" alt="
-                                    Грунты для металлических изделий" class="articles-section__list-item-img">
-                                </div>
-                                <p class="articles-section__list-item-heading">
-                                    Грунты для металлических изделий
-                                </p>
-                            </a>
-                        </li>
-                        <li class="articles-section__list-item">
-                            <a href="#" class="articles-section__list-item-link-wrapper">
-                                <div class="articles-section__list-item-img-wrapper">
-                                    <img src="./assets/img/articles-img.jpg" alt="
-                                    Грунты для металлических изделий" class="articles-section__list-item-img">
-                                </div>
-                                <p class="articles-section__list-item-heading">
-                                    Грунты для металлических изделий
-                                </p>
-                            </a>
-                        </li>
                     </ul>
-                    <div class="pagination articles-section__pagination">
+                    <!-- <div class="pagination articles-section__pagination">
                         <a href="#" class="pagination__link articles-section__pagination-link active">
                             1
                         </a>
@@ -181,7 +139,7 @@
                         <a href="#" class="pagination__link articles-section__pagination-link">
                             4
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <section class="contacts-section">
@@ -318,7 +276,7 @@
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./scripts/burger-menu.js"></script>
-        <script src="./scripts/article-swiper.js"></script>
+        <script type="module" src="./scripts/articles-page.js"></script>
     </div>
 </body>
 
