--- a/catalog-item.html
+++ b/catalog-item.html
@@ -15,7 +15,7 @@
                 <a href="#" class="mobile-menu__nav-link">
                     О компании
                 </a>
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="./articles.html" class="mobile-menu__nav-link">
                     Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
@@ -28,7 +28,7 @@
                     Контакты
                 </a>
             </nav>
-            <a href="#" class="btn btn_icon mobile-menu__btn">
+            <a href="./catalog.html" class="btn btn_icon mobile-menu__btn">
                 <div class="btn__icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -60,7 +60,7 @@
                     <a href="#" class="header__nav-link">
                         О компании
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="./articles.html" class="header__nav-link">
                         Статьи
                     </a>
                     <a href="#" class="header__nav-link">
@@ -90,7 +90,7 @@
                     <a href="tel:+79999999999" class="tel-link header__tel-link">
                         +7 999 999-99-99
                     </a>
-                    <a href="#" class="btn btn_icon header__btn">
+                    <a href="./catalog.html" class="btn btn_icon header__btn">
                         <div class="btn__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
