--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
                     <a href="#" class="header__nav-link">
                         О компании
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="./articles.html" class="header__nav-link">
                         Статьи
                     </a>
                     <a href="#" class="header__nav-link">
@@ -90,7 +90,7 @@
                     <a href="tel:+79999999999" class="tel-link header__tel-link">
                         +7 999 999-99-99
                     </a>
-                    <a href="#" class="btn btn_icon header__btn">
+                    <a href="./catalog.html" class="btn btn_icon header__btn">
                         <div class="btn__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -143,22 +143,26 @@
                                     </div>
                                     <div class="catalog-section__filter-content">
                                         <label class="catalog-section__filter-label">
-                                            <input data-id="1" type="checkbox" name="filter" id="" style="display: none;">
+                                            <input data-id="1" type="checkbox" name="filter" id=""
+                                                style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
                                             Грунт
                                         </label>
                                         <label class="catalog-section__filter-label">
-                                            <input data-id="2" type="checkbox" name="filter" id="" style="display: none;">
+                                            <input data-id="2" type="checkbox" name="filter" id=""
+                                                style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
                                             Грунт-эмаль
                                         </label>
                                         <label class="catalog-section__filter-label">
-                                            <input data-id="3" type="checkbox" name="filter" id="" style="display: none;">
+                                            <input data-id="3" type="checkbox" name="filter" id=""
+                                                style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
                                             Эмаль
                                         </label>
                                         <label class="catalog-section__filter-label">
-                                            <input data-id="4" type="checkbox" name="filter" id="" style="display: none;">
+                                            <input data-id="4" type="checkbox" name="filter" id=""
+                                                style="display: none;">
                                             <div class="catalog-section__filter-checkbox"></div>
                                             Предварительная обработка
                                         </label>
