--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#" class="mobile-menu__nav-link">
                     О компании
                 </a>
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="./articles.html" class="mobile-menu__nav-link">
                     Статьи
                 </a>
                 <a href="#" class="mobile-menu__nav-link">
@@ -29,7 +29,7 @@
                     Контакты
                 </a>
             </nav>
-            <a href="#" class="btn btn_icon mobile-menu__btn">
+            <a href="./catalog.html" class="btn btn_icon mobile-menu__btn">
                 <div class="btn__icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -44,7 +44,7 @@
         </div>
         <header class="header">
             <div class="wrapper header__wrapper">
-                <a href="#" class="header__logo-link">
+                <a href="/" class="header__logo-link">
                     <img src="./assets/img/logo.png" alt="Краски KOVALI" class="logo header__logo">
                     <span class="header__logo-year">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
@@ -61,7 +61,7 @@
                     <a href="#" class="header__nav-link">
                         О компании
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="./articles.html" class="header__nav-link">
                         Статьи
                     </a>
                     <a href="#" class="header__nav-link">
@@ -91,7 +91,7 @@
                     <a href="tel:+79999999999" class="tel-link header__tel-link">
                         +7 999 999-99-99
                     </a>
-                    <a href="#" class="btn btn_icon header__btn">
+                    <a href="./catalog.html" class="btn btn_icon header__btn">
                         <div class="btn__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -216,7 +216,7 @@
                             <h4 class="about-section__overlay-popup-heading">
                                 Цинконаполненный грунт <br> KOVALI 95%
                             </h4>
-                            <a href="https://kovali.ru/catalog/gruntovki/po_metallu_antikorroziynye/33241/"
+                            <a href="./catalog-item.html?id=2"
                                 class="btn about-section__overlay-popup-btn">
                                 Перейти в каталог
                             </a>
