--- a/articles.html
+++ b/articles.html
@@ -13,7 +13,7 @@
     <div class="page">
         <div class="mobile-menu">
             <nav class="mobile-menu__nav">
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="./index.html#about" class="mobile-menu__nav-link">
                     О компании
                 </a>
                 <a href="./articles.html" class="mobile-menu__nav-link">
@@ -22,10 +22,11 @@
                 <a href="#" class="mobile-menu__nav-link">
                     Дополнительно
                 </a>
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="https://www.ozon.ru/brand/kovali-100344887/?utm_campaign=vendor_org_244285"
+                    class="mobile-menu__nav-link" target="_blank">
                     Маркетплейсы
                 </a>
-                <a href="#" class="mobile-menu__nav-link">
+                <a href="#contacts" class="mobile-menu__nav-link">
                     Контакты
                 </a>
             </nav>
@@ -45,7 +46,7 @@
         <header class="header">
             <div class="wrapper header__wrapper">
                 <a href="/" class="header__logo-link">
-                    <img src="./assets/img/logo.png" alt="Краски KOVALI" class="logo header__logo">
+                    <img src="./assets/img/logo.svg" alt="Краски KOVALI" class="logo header__logo">
                     <span class="header__logo-year">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
                             <rect width="25" height="25" rx="12.5" fill="#FF7707" />
@@ -58,7 +59,7 @@
                     </span>
                 </a>
                 <nav class="header__nav">
-                    <a href="#" class="header__nav-link">
+                    <a href="./index.html#about" class="header__nav-link">
                         О компании
                     </a>
                     <a href="./articles.html" class="header__nav-link">
@@ -67,10 +68,11 @@
                     <a href="#" class="header__nav-link">
                         Дополнительно
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="https://www.ozon.ru/brand/kovali-100344887/?utm_campaign=vendor_org_244285"
+                        class="header__nav-link" target="_blank">
                         Маркетплейсы
                     </a>
-                    <a href="#" class="header__nav-link">
+                    <a href="#contacts" class="header__nav-link">
                         Контакты
                     </a>
                 </nav>
@@ -121,7 +123,7 @@
             <section class="articles-section">
                 <div class="wrapper articles-section__wrapper">
                     <div class="articles-section__date-filter">
-                        
+
                     </div>
                     <ul class="articles-section__list">
                     </ul>
@@ -141,7 +143,7 @@
                     </div> -->
                 </div>
             </section>
-            <section class="contacts-section">
+            <section class="contacts-section" id="contacts">
                 <div class="wrapper contacts-section__wrapper">
                     <div class="contacts-section__info">
                         <div class="contacts-section__info-header">
